created bowl of noodle's own folder with css and js files

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=bowl-of-noodles.html">
+    <meta http-equiv="refresh" content="0; url=main/cozy-restaurant-game/bowl-of-noodles/bowl-of-noodles.html">
     <title>Redirecting...</title>
 </head>
 <body>
     <p>If you are not redirected automatically, 
-        <a href="bowl-of-noodles.html">click here</a>.
+        <a href="main/cozy-restaurant-game/bowl-of-noodles/bowl-of-noodles.html">click here</a>.
     </p>
 </body>
 </html>
