made index.html smaller

--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=main/cozy-restaurant-game/bowl-of-noodles/bowl-of-noodles.html">
-    <title>Redirecting...</title>
+<script>
+location.replace("main/cozy-restaurant-game/bowl-of-noodles/bowl-of-noodles.html");
+</script>
 </head>
-<body>
-    <p>If you are not redirected automatically, 
-        <a href="main/cozy-restaurant-game/bowl-of-noodles/bowl-of-noodles.html">click here</a>.
-    </p>
-</body>
 </html>
