working on something

--- a/main/cozy-restaurant-game/bowl-of-noodles/bowl-of-noodles.html
+++ b/main/cozy-restaurant-game/bowl-of-noodles/bowl-of-noodles.html
@@ -3,18 +3,20 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>A Draggable Red Square</title>
+        <title>A Bowl of Noodles</title>
         <link rel="stylesheet" href="bowl-of-noodles.css" />
     </head>
 
     <body>
         <main id="game-container" role="application">
-            <div
+            <img
                 id="draggable-item"
+                src="../../../assets/bowl-of-noodles-pixilart.png"
+                alt="Bowl of noodles"
                 role="button"
                 tabindex="0"
-                aria-label="Draggable red square"
-            ></div>
+                aria-label="Draggable bowl of noodles"
+            />
         </main>
 
         <script src="bowl-of-noodles.js"></script>
