progress on the cozy restaurant menu page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script>
-location.replace("main/cozy-restaurant-game/bowl-of-noodles/bowl-of-noodles.html");
+location.replace("main/menu/menu.html");
 </script>
 </head>
 </html>
