--- a/main/menu/menu.html
+++ b/main/menu/menu.html
@@ -14,6 +14,7 @@
         <h1 id="menu-title">Cozy Restaurant</h1>
         <div class="menu-items">
             <a href="../cozy-restaurant-game/bowl-of-noodles/bowl-of-noodles.html" class="image-button"></a>
+            <!--the width of the screen is 1300px height is 730px-->
         </div>
     </div>
 </body>
